--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,15 +11,15 @@
 
 
 html {
-    @apply text-[22px] xl:text-[18px] md:text-[18px]
+    @apply text-[22px] xl:text-[18px] md:text-[18px] scroll-smooth
 }
 
-.chapter-block h1, .chapter-block h2 {
-    @apply text-2xl my-0 pt-7 font-bold
+.chapter-block:has(h1) , .chapter-block:has(h2)  {
+    @apply text-2xl  mt-7 mb-2 font-bold
 }
 
-.chapter-block h3 {
-    @apply text-xl my-0 pt-4 font-bold
+.chapter-block:has(h3)  {
+    @apply text-xl mb-2 mt-4 font-bold
 }
 
 .chapter-block p {
@@ -34,12 +34,25 @@ html {
     @apply -translate-y-2 font-bold text-sm inline-block opacity-70 ml-1
 }
 
-.chapter-block .quote {
-    @apply max-w-[70%] pl-10 xl:max-w-[80%] md:max-w-none
+.chapter-block:has(.quote)  {
+    @apply max-w-[70%] ml-10 xl:max-w-[80%] md:max-w-none
 }
 
 .link-animation {
     @apply inline-block relative overflow-hidden after:transition-all after:absolute after:bottom-0 after:h-[2px] after:rounded-full after:w-full after:bg-black after:left-[-100%] hover:after:left-0
 }
+
+.link-animation-left {
+    @apply inline-block relative overflow-hidden after:transition-all after:absolute after:bottom-0 after:h-[2px] after:rounded-full after:w-full after:bg-black after:right-[-100%] hover:after:right-0
+}
+
+.link-animation-opacity {
+    @apply transition-all hover:opacity-70
+}
+
+.portal {
+    @apply fixed top-0 right-0 left-0 bottom-0 z-[999] pointer-events-none
+}
+
 
 }
